# self-rag

./: .env.example  ARCHITECTURE.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: autodoc-analysis.yml  autodoc-update.yml
app/api/controller/: document.py
app/api/routers/: __init__.py
app/bot/: llm.py
app/bot/nodes/: answer_usefulness.py  context_relevance_checker.py  rewrite_answer.py  rewrite_question.py
app/core/: aws.py  config.py  s3.py
app/rag/ingestor/: pdf_ingestor.py
app/worker/: __init__.py  sqs_consumer.py  sqs_queue.py
scripts/: eval_retrieval.py  eval_testset.jsonl  localstack-init.sh  retrieval_eval_report.md
