[project]
name = "self-rag"
version = "0.1.0"
description = "A production-ready Retrieval-Augmented Generation (RAG) API built with FastAPI, LangGraph, PostgreSQL + pgvector, and Google Gemini."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.2",
    "aiohttp==3.14.1",
    "aiosignal==1.4.0",
    "aiosqlite==0.22.1",
    "alembic>=1.18.4",
    "aioboto3>=15.5.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "asttokens==3.0.1",
    "asyncio>=4.0.0",
    "asyncpg>=0.31.0",
    "attrs==26.1.0",
    "certifi==2026.5.20",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "comm==0.2.3",
    "cryptography==48.0.1",
    "debugpy==1.8.21",
    "decorator==5.3.1",
    "detect-installer==0.1.0",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "dotenv==0.9.9",
    "email-validator==2.3.0",
    "executing==2.2.1",
    "faiss-cpu==1.14.3",
    "fastapi==0.137.1",
    "fastapi-cli==0.0.24",
    "fastapi-cloud-cli==0.20.0",
    "fastar==0.11.0",
    "filetype==1.2.0",
    "frozenlist==1.8.0",
    "google-api-core>=2.31.0",
    "google-auth==2.53.0",
    "google-genai==2.8.0",
    "grandalf>=0.8",
    "greenlet==3.5.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.8.0",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "idna==3.18",
    "ipykernel==7.2.0",
    "ipython==9.14.1",
    "ipython-pygments-lexers==1.1.1",
    "itsdangerous==2.2.0",
    "jedi==0.20.0",
    "jinja2==3.1.6",
    "jsonpatch==1.33",
    "jsonpointer==3.1.1",
    "jupyter-client==8.9.1",
    "jupyter-core==5.9.1",
    "langchain==1.3.6",
    "langchain-classic==1.0.7",
    "langchain-community==0.4.2",
    "langchain-core==1.4.3",
    "langchain-experimental>=0.4.2",
    "langchain-google-genai==4.2.5",
    "langchain-protocol==0.0.16",
    "langchain-tavily==0.2.18",
    "langchain-text-splitters==1.1.2",
    "langgraph==1.2.4",
    "langgraph-checkpoint==4.1.1",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langgraph-prebuilt==1.1.0",
    "langgraph-sdk==0.4.2",
    "langsmith==0.8.11",
    "markdown-it-py==4.2.0",
    "markupsafe==3.0.3",
    "matplotlib-inline==0.2.2",
    "mdurl==0.1.2",
    "multidict==6.7.1",
    "nest-asyncio==1.6.0",
    "numpy==2.4.6",
    "orjson==3.11.9",
    "ormsgpack==1.12.2",
    "packaging==26.2",
    "parso==0.8.7",
    "pexpect==4.9.0",
    "pgvector>=0.4.2",
    "platformdirs==4.10.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.5.2",
    "psutil==7.2.2",
    "psycopg2>=2.9.12",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pycparser==3.0",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pydantic-extra-types==2.11.1",
    "pydantic-settings==2.14.1",
    "pygments==2.20.0",
    "pypdf==6.13.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.32",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "regex==2026.5.9",
    "requests==2.34.2",
    "requests-toolbelt==1.0.0",
    "rich==15.0.0",
    "rich-toolkit==0.20.1",
    "rignore==0.7.6",
    "sentry-sdk==2.63.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.50",
    "stack-data==0.6.3",
    "starlette==1.3.1",
    "tavily-python==0.7.25",
    "tenacity==9.1.4",
    "tiktoken==0.13.0",
    "tornado==6.5.7",
    "tqdm>=4.68.3",
    "traitlets==5.15.1",
    "typer==0.26.7",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.7.0",
    "uuid-utils==0.16.0",
    "uuid6>=2025.0.1",
    "uvicorn==0.49.0",
    "uvloop==0.22.1",
    "watchfiles==1.2.0",
    "wcwidth==0.8.1",
    "websockets==15.0.1",
    "xxhash==3.7.0",
    "yarl==1.24.2",
    "zstandard==0.25.0",
]
